src/objects/Agent_Configuration__c.object
<CustomObject>
    <description>Stores agent skills and status e.g. Available, Busy for chat.</description>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User available for chat as an agent.</description>
        <inlineHelpText>User available for chat as an agent.</inlineHelpText>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agent_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skillset__c</fullName>
        <description>Website visitor will select desired topic for discussion and the same will be the skill of an agent.</description>
        <inlineHelpText>Website visitor will select desired topic for discussion and the same will be the skill of an agent.</inlineHelpText>
        <label>Skillset</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Ordered Item(s)</fullName>
                </value>
                <value>
                    <fullName>Product Pricing &amp; Discount</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Agent status for Chat.</description>
        <inlineHelpText>Agent status for Chat.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agent Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Agent-{000000}</displayFormat>
        <label>Configuration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>